# CryptForge

./: .lighthouserc.production.json  AGENTS.md  CHANGELOG.md  README.md  lighthouserc.json  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci-nightly.yml  ci-pr.yml  git-hygiene.yml  lockfile-rationale.yml  release.yml
docs/: PORTFOLIO-DISPOSITION.md
scripts/: doctor-env.mjs  run-in-safe-cwd.mjs  setup-husky.mjs
scripts/perf/: bootstrap-baseline.mjs  compare-metric.mjs
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/engine/: abilities.rs  achievements.rs  ai.rs  combat.rs  effects.rs  enemies.rs  entity.rs  fov.rs  inventory.rs  items.rs  map.rs  mod.rs  pathfinding.rs  state.rs
src-tauri/src/engine/dungeon/: bsp.rs  cellular.rs  corridor.rs  mod.rs  placement.rs  room.rs
src-tauri/src/flavor/: mod.rs  templates.rs
src-tauri/src/persistence/: config.rs  database.rs  mod.rs  save.rs
src/hooks/: useInput.test.tsx
src/lib/: api.test.ts
