[package]
name = "cryptforge"
version = "0.1.0"
edition = "2021"

[lib]
name = "cryptforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cryptforge"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.9", features = ["std_rng"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
